--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,5 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: radial-gradient(ellipse at bottom, #ff6ddf30, transparent 50%);
 }
