polish the participant box

--- a/src/index.css
+++ b/src/index.css
@@ -76,3 +76,11 @@ input[type='number']::-webkit-outer-spin-button {
   mask-image: url('/img/neged-hat.png');
   mask-size: cover;
 }
+
+.double-rows-break {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
