--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,10 @@ input[type='number']::-webkit-outer-spin-button {
   margin: 0;
 }
 
+input[type='range']::-webkit-slider-thumb {
+  background-color: #7f60f9;
+}
+
 ::selection {
   background-color: #ac60f94d;
 }
