--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 :root {
+  /* Actual value is fetched and set from the backend in the code */
   --round-timeout: 5000ms;
 }
 
@@ -89,7 +90,7 @@ a {
 
 .reveal-winner {
   will-change: transform;
-  transition: all var(--round-timeout) cubic-bezier(0.0125, 0.1, 0.1, 1) 0s;
+  transition: all var(--round-timeout) cubic-bezier(0, 0.3, 0.3, 1.05) 0s;
 }
 
 .mask-hat {
