--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: radial-gradient(circle at bottom, #ff6ddf30, transparent 50%);
+  background: radial-gradient(circle at center, #ff6ddf30, transparent 50%);
 }
 
 input[type='string'] {
