--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,15 @@
 :root {
   /* Actual value is fetched and set from the backend in the code */
   --round-timeout: 5000ms;
+  --selection: #ac60f94d;
   --secondary: #f4b862;
+  --primary: #7f60f9;
   --primary-dark: #5b38e7;
 }
 
 html {
   scroll-behavior: smooth;
-  scrollbar-color: #7f60f9 transparent;
+  scrollbar-color: var(--primary) transparent;
   scrollbar-width: thin;
 }
 
@@ -33,14 +35,14 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 input[type='range']::-webkit-slider-thumb {
-  background-color: #7f60f9;
+  background-color: var(--primary);
 }
 
 ::selection {
-  background-color: #ac60f94d;
+  background-color: var(--selection);
 }
 ::moz-selection {
-  background-color: #ac60f94d;
+  background-color: var(--selection);
 }
 
 a {
